--- a/css/poddebice-projekt.css
+++ b/css/poddebice-projekt.css
@@ -17,7 +17,7 @@
 
 .area {
     width: 1200px;
-    height: 2000px;
+    height: 100vh;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -47,4 +47,5 @@ background: linear-gradient(135deg, #cbccd755 25%, transparent 25%) -10px 0/ 20p
   .area {
     width: 100vw;
   }
+
 }
